# nasdaq-review

./: .gitignore  Supabase_설정방법.md  app.py  database.py  kis_api.py  pdf_parser.py  pyproject.toml  replit.md  requirements.txt  streamlit_cloud_배포방법.md  supabase_schema.sql  trade_classifier.py  trade_matcher.py
.streamlit/: config.toml
