[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "plotly>=6.5.2",
    "pytz>=2025.2",
    "streamlit>=1.53.1",
    "yfinance>=1.1.0",
]
